# pocowebserver

./: .dockerignore  .env  .gitignore  .gitmodules  CMakeLists.txt  README.md  config.toml  docker-compose.yml
data/postgres_init/: init.sql
include/: pws_config.h  pws_config.h.in
include/CppUnit/: CppUnit.h  CppUnitException.h  Orthodox.h  TestCaller.h  TestDecorator.h  TestResult.h  TestSuite.h  TextTestResult.h
include/Poco/: ApacheApplication.h  ApacheChannel.h  ApacheConnector.h  ApacheRequestHandlerFactory.h  ApacheServerResponse.h  ApacheStream.h  DoubleByteEncoding.h  Encodings.h  ISO8859_10Encoding.h  ISO8859_11Encoding.h  ISO8859_14Encoding.h  ISO8859_16Encoding.h  ISO8859_4Encoding.h  ISO8859_5Encoding.h  ISO8859_7Encoding.h  MacCentralEurRomanEncoding.h  Windows1255Encoding.h  Windows1256Encoding.h  Windows1257Encoding.h  Windows874Encoding.h  Windows936Encoding.h  Windows949Encoding.h  Windows950Encoding.h
include/Poco/ActiveRecord/: ActiveRecord.h  ActiveRecordLib.h  Context.h  IDTraits.h  Query.h  StatementPlaceholderProvider.h
include/Poco/CppParser/: Attributes.h  BuiltIn.h  CppToken.h  Decl.h  Enum.h  Function.h  Parameter.h  Parser.h  TypeDef.h  Utility.h
include/Poco/Crypto/: Cipher.h  CipherFactory.h  CipherKey.h  CipherKeyImpl.h  Crypto.h  CryptoException.h  CryptoStream.h  (+9 more)
include/libpq/: libpq-fs.h
include/server/: base.hpp  serverapplication.hpp  useful_functions.hpp
poco_app/: CMakeLists.txt  Dockerfile  config.toml
poco_app/include/: pws_config.h
poco_app/include/CppUnit/: RepeatedTest.h  Test.h  TestCase.h  TestFailure.h  TestRunner.h  TestSetup.h  estring.h
poco_app/include/Poco/: ApacheServerRequest.h  ISO8859_13Encoding.h  ISO8859_3Encoding.h  ISO8859_6Encoding.h  ISO8859_8Encoding.h  ISO8859_9Encoding.h  MacChineseSimpEncoding.h  MacChineseTradEncoding.h  MacCyrillicEncoding.h  MacJapaneseEncoding.h  MacKoreanEncoding.h  MacRomanEncoding.h  Windows1253Encoding.h  Windows1254Encoding.h  Windows1258Encoding.h  Windows932Encoding.h
poco_app/include/Poco/CppParser/: AttributesParser.h  CppParser.h  EnumValue.h  NameSpace.h  Struct.h  Symbol.h  Tokenizer.h  Variable.h
poco_app/include/Poco/Crypto/: CipherImpl.h  CryptoTransform.h  DigestEngine.h  ECKey.h  ECKeyImpl.h  Envelope.h  KeyPair.h  RSACipherImpl.h  RSAKeyImpl.h
poco_app/include/Poco/DOM/: AbstractContainerNode.h  CDATASection.h  CharacterData.h  ChildNodesList.h  DOMException.h  DOMObject.h  DOMWriter.h  DTDMap.h  DocumentType.h  ElementsByTagNameList.h  EntityReference.h  EventDispatcher.h  EventException.h  Node.h  NodeAppender.h  NodeFilter.h  NodeList.h  Notation.h
poco_app/include/Poco/Data/: AbstractBinder.h  AbstractPreparator.h  Binding.h  Date.h  JSONRowFormatter.h  LOB.h  RecordSet.h  RowIterator.h  Session.h  SessionPool.h  SessionPoolContainer.h  SimpleRowFormatter.h  StatementImpl.h  Time.h  Transaction.h  Transcoder.h  TypeHandler.h
poco_app/include/Poco/Data/PostgreSQL/: BinaryExtractor.h  Connector.h  Extractor.h  PostgreSQLStatementImpl.h  PostgreSQLTypes.h  SessionImpl.h  Utility.h
poco_app/include/Poco/Data/SQLite/: Binder.h  SQLite.h  SQLiteException.h  SQLiteStatementImpl.h  Utility.h
poco_app/include/Poco/JWT/: JWTException.h  Signer.h  Token.h
poco_app/include/Poco/MongoDB/: BSONReader.h  Binary.h  Connection.h  Cursor.h  DeleteRequest.h  InsertRequest.h  JavaScriptCode.h  MessageHeader.h  MongoDB.h  RegularExpression.h  ReplicaSet.h
poco_app/include/Poco/Net/: AcceptCertificateHandler.h  CertificateHandlerFactory.h  ConsoleCertificateHandler.h  Context.h  DatagramSocket.h  DatagramSocketImpl.h  EscapeHTMLStream.h  FTPClientSession.h  FTPSStreamFactory.h  FilePartSource.h  HTTPChunkedStream.h  HTTPClientSession.h  HTTPCookie.h  HTTPCredentials.h  HTTPDigestCredentials.h  HTTPFixedLengthStream.h  HTTPRequestHandler.h  HTTPResponse.h  HTTPSSessionInstantiator.h  HTTPSStreamFactory.h  HTTPServerSession.h  HTTPSessionFactory.h  HTTPSessionInstantiator.h  HTTPStreamFactory.h  ICMPClient.h  ICMPPacket.h  ICMPPacketImpl.h  ICMPSocket.h  ICMPv4PacketImpl.h  IPAddressImpl.h  KeyConsoleHandler.h  MailMessage.h  MailRecipient.h  MailStream.h  MessageHeader.h  MulticastSocket.h  NetException.h  NetSSL.h  NetworkInterface.h  OAuth10Credentials.h  (+26 more)
poco_app/include/Poco/PDF/: AttributedString.h  Cell.h  Document.h  PDF.h  PDFException.h  Page.h  deflate.h  hpdf.h  hpdf_3dmeasure.h  hpdf_pages.h  hpdf_pdfa.h
poco_app/include/Poco/Prometheus/: AtomicFloat.h  Collector.h  Counter.h  LabeledMetricImpl.h  MetricsRequestHandler.h  MetricsServer.h  Registry.h
poco_app/include/Poco/Redis/: Exception.h  Redis.h
poco_app/include/Poco/SAX/: ContentHandler.h  DTDHandler.h  DeclHandler.h  DefaultHandler.h  EntityResolver.h  EntityResolverImpl.h  ErrorHandler.h  InputSource.h  LexicalHandler.h  Locator.h  SAXException.h
poco_app/include/Poco/SevenZip/: Archive.h
poco_app/include/Poco/Util/: Application.h  ConfigurationMapper.h  FilesystemConfiguration.h  HelpFormatter.h  IniFileConfiguration.h  LoggingSubsystem.h  MapConfiguration.h  Option.h  OptionProcessor.h  PropertyFileConfiguration.h  ServerApplication.h  SystemConfiguration.h
poco_app/include/Poco/XML/: QName.h  XMLStream.h  XMLStreamParser.h  XMLString.h  XMLWriter.h
poco_app/include/Poco/Zip/: AutoDetectStream.h  PartialStream.h  ZipArchiveInfo.h  ZipManipulator.h  ZipUtil.h
poco_app/include/db/: dbhandler.hpp
poco_app/include/server/: serverapplication.hpp
poco_app/include/server/api/: api.hpp  apicurrenthandler.hpp  getUsers.hpp  getme.hpp  postlogin.hpp
poco_app/include/server/handlers/: errorhtmlhandler.hpp
poco_app/public/css/: main.css
poco_app/src/: main.cpp
poco_app/src/db/: dbhandler.cpp
poco_app/src/server/: base.cpp  serverapplication.cpp
poco_app/src/server/api/: api.cpp  apicurrenthandler.cpp  getUsers.cpp  getme.cpp  postlogin.cpp
poco_app/src/server/handlers/: csshandler.cpp  errorhtmlhandler.cpp  htmlhandler.cpp
public/: error.html  index.html
public/js/: onclick.js
src/: main.cpp
src/server/: base.cpp  serverapplication.cpp  useful_functions.cpp
(+239 files in other folders)
